Update Análisis individual de una acción.ipynb

--- a/1. Introducción/Análisis individual de una acción.ipynb
+++ b/1. Introducción/Análisis individual de una acción.ipynb
@@ -84,7 +84,7 @@
    "id": "c5c2f9d8-1b72-4a53-a4ae-08e83ab3d594",
    "metadata": {},
    "source": [
-    "### Podemos obtener la informacion finacniera y corporativa de la empresa utilizando los metodos establecidos dentro de \"yfinance\":\n"
+    "### Podemos obtener la informacion finacniera y corporativa de la empresa utilizando los metodos establecidos dentro de \"[yfinance](https://yfinance-python.org/reference/yfinance.ticker_tickers.html)\": \n"
    ]
   },
   {
