--- a/Ejemplos con codigo/Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos con codigo/Análisis_individual_de_una_acción.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "# 1. Introducción a los elementos de la librería **yfinance**: <br> **Análisis individual de una acción.**\n",
         "\n",
-        "## En este apartado se muestra la forma de acceder a la información financiera y corporativa de la empresa, como el sector e industria en que participa; sus estados contables, como el balance general o el estado de resultados; y el precio de sus acciones.\n",
+        "## En este apartado se muestra la forma de acceder a la **información financiera y corporativa** de la empresa, como el sector e industria en que participa; sus estados contables, como el balance general o el estado de resultados; y el **precio de sus acciones**.\n",
         "\n",
         "## Al final de este apartado se utiliza la librería **mplfinance** para realizar gráficas de velas.\n",
         "\n",
@@ -125,20 +125,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# \"info\" es un diccionario que contiene la informacion corporativa de la empresa:\n",
+        "# \"info\" es un diccionario que contiene la información corporativa de la empresa:\n",
         "info= empresa.get_info()\n",
         "\n",
-        "# \"income_stmt\" es un pd.DataFrame que contiene la informacion del Estado de Resultado \"Income Statment\":\n",
+        "# \"income_stmt\" es un pd.DataFrame que contiene la información del Estado de Resultado \"Income Statment\":\n",
         "income= empresa.get_income_stmt(pretty= True, freq='quarterly').iloc[::-1]    #default freq 'yearly'    #invertimos el orden de la tabla con .iloc\n",
         "\n",
-        "# \"balance_sheet\" es un pd.DataFrame que contiene la informacion del Balance General \"Balance Sheet\":\n",
+        "# \"balance_sheet\" es un pd.DataFrame que contiene la información del Balance General \"Balance Sheet\":\n",
         "balance= empresa.get_balance_sheet(pretty= True, freq='quarterly').iloc[::-1]\n",
         "\n",
-        "# \"income_stmt\" es un pd.DataFrame que contiene la informacion del Estado de Resultado \"Cash Flow Statement\":\n",
+        "# \"income_stmt\" es un pd.DataFrame que contiene la información del Estado de Resultado \"Cash Flow Statement\":\n",
         "cashflow= empresa.get_cashflow(pretty= True, freq='quarterly').iloc[::-1]\n",
         "\n",
         "# \"get_earnings_dates\" es un pd.DataFrame que contiene las fechas de los EPS estimados y reportados la empresa:\n",
-        "eps_info= empresa.get_earnings_dates()"
+        "eps_info= empresa.get_earnings_dates()\n"
       ],
       "metadata": {
         "id": "S_h0WjiEzsUN"
@@ -169,7 +169,7 @@
           "height": 423
         },
         "id": "mTVmC9rC1gjh",
-        "outputId": "32088ce7-671a-4367-a536-225a2526eefa"
+        "outputId": "48d6cc07-3b51-49c0-cf53-9af5452ebaa3"
       },
       "execution_count": 5,
       "outputs": [
@@ -246,7 +246,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e9cebb72-9428-4abd-b1f4-deb93176b781\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4d513bf8-aa66-4433-996a-20dcda7825ee\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -380,7 +380,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9cebb72-9428-4abd-b1f4-deb93176b781')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4d513bf8-aa66-4433-996a-20dcda7825ee')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -432,12 +432,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e9cebb72-9428-4abd-b1f4-deb93176b781 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4d513bf8-aa66-4433-996a-20dcda7825ee button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e9cebb72-9428-4abd-b1f4-deb93176b781');\n",
+              "        const element = document.querySelector('#df-4d513bf8-aa66-4433-996a-20dcda7825ee');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -457,8 +457,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-03507b65-f394-4464-a927-4865888d2afe\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-03507b65-f394-4464-a927-4865888d2afe')\"\n",
+              "    <div id=\"df-38628648-3e5a-4099-9c1b-3755a3020c52\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-38628648-3e5a-4099-9c1b-3755a3020c52')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -577,14 +577,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-03507b65-f394-4464-a927-4865888d2afe button');\n",
+              "            document.querySelector('#df-38628648-3e5a-4099-9c1b-3755a3020c52 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_2576eed7-b87a-43f9-be1a-370af16eaaf0\">\n",
+              "  <div id=\"id_15db55b3-1261-4016-bb61-a77b2d59eca6\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -628,7 +628,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_2576eed7-b87a-43f9-be1a-370af16eaaf0 button.colab-df-generate');\n",
+              "        document.querySelector('#id_15db55b3-1261-4016-bb61-a77b2d59eca6 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -658,7 +658,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "En el caso de la variable *eps*, podemos observar en el resultado que la fecha tiene agregada la zona horaria. Para quitar ese componente se utiliza la siguiente línea de código:"
+        "En el caso de la variable *eps_info*, podemos observar en el resultado que la fecha tiene agregada la zona horaria. Para quitar ese componente se utiliza la siguiente línea de código:"
       ],
       "metadata": {
         "id": "Q4uKWWxVmZDK"
@@ -676,7 +676,7 @@
           "height": 457
         },
         "id": "ModcGzftmZ1P",
-        "outputId": "36ddc7e9-1606-4d17-c7e4-49a655129085"
+        "outputId": "3f4cc88f-7c55-41c5-eaed-348f3e95804a"
       },
       "execution_count": 6,
       "outputs": [
@@ -701,7 +701,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3fad65a8-5ba6-4267-b824-0b6dd4576a78\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b85a20c5-f013-41b7-8b6b-c4afdc5f37d3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -810,7 +810,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3fad65a8-5ba6-4267-b824-0b6dd4576a78')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b85a20c5-f013-41b7-8b6b-c4afdc5f37d3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -862,12 +862,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3fad65a8-5ba6-4267-b824-0b6dd4576a78 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b85a20c5-f013-41b7-8b6b-c4afdc5f37d3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3fad65a8-5ba6-4267-b824-0b6dd4576a78');\n",
+              "        const element = document.querySelector('#df-b85a20c5-f013-41b7-8b6b-c4afdc5f37d3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -887,8 +887,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-8433c8be-02c4-4e60-a2dc-e8811d1ab472\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8433c8be-02c4-4e60-a2dc-e8811d1ab472')\"\n",
+              "    <div id=\"df-3ec8ad75-5689-4b02-bfa5-ea799255dbda\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3ec8ad75-5689-4b02-bfa5-ea799255dbda')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1007,14 +1007,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-8433c8be-02c4-4e60-a2dc-e8811d1ab472 button');\n",
+              "            document.querySelector('#df-3ec8ad75-5689-4b02-bfa5-ea799255dbda button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_c4c99964-280b-440b-80aa-2fe7cfff608a\">\n",
+              "  <div id=\"id_fa780dea-5d0e-4438-8c61-eab41526b92c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1058,7 +1058,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c4c99964-280b-440b-80aa-2fe7cfff608a button.colab-df-generate');\n",
+              "        document.querySelector('#id_fa780dea-5d0e-4438-8c61-eab41526b92c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1088,7 +1088,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Si se requiere trabajar con cualquier pd.DataFrame generado durante el código, se puede descargar en formato de archivo excel (.xlsx):"
+        "Si se requiere trabajar con cualquier pd.DataFrame generado durante el código en Excel, la línea de código de descarga es:"
       ],
       "metadata": {
         "id": "dbjTh4ErCdRP"
@@ -1098,7 +1098,7 @@
       "cell_type": "code",
       "source": [
         "#por ejemplo, 'balance'\n",
-        "balance.to_excel('informacion_de_la_empresa.xlsx')   # se puede modificar el nombre del archivo pero se debe respetar la extencion '.xlsx'"
+        "balance.to_excel('ifnormacion_de_la_empresa.xlsx')   # se puede modificar el nombre del archivo pero se debe respetar la extencion '.xlsx'"
       ],
       "metadata": {
         "id": "22lHkgopzvKR"
@@ -1111,11 +1111,9 @@
       "source": [
         "\n",
         "\n",
-        "---\n",
-        "\n",
         "<br>\n",
         "\n",
-        "El procedimiento para obtener los precios de apertura, maximo, minimo y cierre de la empresa es el siguiente:"
+        "El procedimiento para obtener los precios de apertura, máximo, mínimo y cierre de la empresa es el siguiente:"
       ],
       "metadata": {
         "id": "7Pc0U_7NC2cK"
@@ -1126,9 +1124,9 @@
       "source": [
         "data= empresa.history(period= 'YTD', interval= '1d')\n",
         "\n",
-        "#data= yf.Ticker(empresa).history(start=\"2025-01-01\", end=\"2025-12-31\")     #se puede consultar informacion de un intervalo en especifico\n",
+        "#data= yf.Ticker(empresa).history(start=\"2025-01-01\", end=\"2025-12-31\")     #se puede consultar información de un intervalo en especifico\n",
         "\n",
-        "#ajustamos el resultado eliminamos el componente de time-zone del indice\n",
+        "#ajustamos el resultado eliminando el componente de time-zone del indice\n",
         "data = data.tz_localize(None)\n",
         "\n",
         "#nos aseguramos de declarar el formato de fecha en los datos del indice\n",
@@ -1165,7 +1163,7 @@
           "height": 455
         },
         "id": "Pcb2wakiuL8K",
-        "outputId": "e83282ae-e1ef-4cb7-8f6b-2624f879172d"
+        "outputId": "25237131-2a86-4c1b-d57a-57c10365b82d"
       },
       "execution_count": 9,
       "outputs": [
@@ -1205,7 +1203,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6d218e36-b53f-494c-8d99-3eabb15ad3cd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-734f1f14-294d-4766-b759-bbc1e15d9c82\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1361,7 +1359,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d218e36-b53f-494c-8d99-3eabb15ad3cd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-734f1f14-294d-4766-b759-bbc1e15d9c82')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1413,12 +1411,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6d218e36-b53f-494c-8d99-3eabb15ad3cd button.colab-df-convert');\n",
+              "        document.querySelector('#df-734f1f14-294d-4766-b759-bbc1e15d9c82 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6d218e36-b53f-494c-8d99-3eabb15ad3cd');\n",
+              "        const element = document.querySelector('#df-734f1f14-294d-4766-b759-bbc1e15d9c82');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1438,8 +1436,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-068ad677-f139-458c-9d79-74616e7ffc3d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-068ad677-f139-458c-9d79-74616e7ffc3d')\"\n",
+              "    <div id=\"df-60d3f907-8869-4ae5-b108-bfd7fd11cc77\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-60d3f907-8869-4ae5-b108-bfd7fd11cc77')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1558,14 +1556,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-068ad677-f139-458c-9d79-74616e7ffc3d button');\n",
+              "            document.querySelector('#df-60d3f907-8869-4ae5-b108-bfd7fd11cc77 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_3b06cb10-b40e-49f3-a3b7-e54cf845083e\">\n",
+              "  <div id=\"id_ffea1c10-8531-4d35-948f-017ab1cb0d59\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1609,7 +1607,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_3b06cb10-b40e-49f3-a3b7-e54cf845083e button.colab-df-generate');\n",
+              "        document.querySelector('#id_ffea1c10-8531-4d35-948f-017ab1cb0d59 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1637,7 +1635,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se puede descargar la tabal de los precio de la acción como archivo Excel:"
+        "Para descargar la tabla de los precios de la acción como archivo Excel, se usa:"
       ],
       "metadata": {
         "id": "XLp5xJpnv-9L"
@@ -1689,7 +1687,7 @@
           "height": 541
         },
         "id": "MhGCHt-jzwfA",
-        "outputId": "09a70736-2ef2-4df5-e20a-dd159643d9a8"
+        "outputId": "7891094a-3022-479c-d19c-3236b8567e12"
       },
       "execution_count": 11,
       "outputs": [
@@ -1738,7 +1736,7 @@
           "height": 541
         },
         "id": "HDMwmIM5z8IK",
-        "outputId": "9cf9e0f1-7715-4ac2-e27c-6b2197e129ad"
+        "outputId": "7f7102b3-a322-485b-c435-355e5d353433"
       },
       "execution_count": 12,
       "outputs": [
