--- a/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "## En este apartado se muestra la forma de acceder a la **información financiera y corporativa** de la empresa, como el sector e industria en que participa; sus estados contables, como el balance general o el estado de resultados; y el **precio de sus acciones**.\n",
         "\n",
-        "## Al final de este apartado se utiliza la librería **mplfinance** para realizar gráficas de velas.\n",
+        "## Al final de este apartado se utiliza la librería **[mplfinance](https://github.com/matplotlib/mplfinance/tree/master)** para realizar gráficas de velas.\n",
         "\n",
         "<br>\n",
         "\n",
@@ -94,7 +94,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Definimos el objeto *empresa* con ayuda de la Clase **Ticker** de la librería. Debemos colocar entre comillas el ticker de la empresa a analizar:"
+        "Definimos el objeto *empresa* con ayuda de la Clase **Ticker** de la librería. Debemos colocar entre comillas el [ticker](https://economipedia.com/definiciones/simbolo-ticker.html) de la empresa a analizar:"
       ],
       "metadata": {
         "id": "qX7kFgZPzmJi"
@@ -116,7 +116,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Podemos obtener la información financiera y corporativa de la empresa utilizando los métodos establecidos dentro de **yfinance**:\n"
+        "Podemos obtener la información financiera y corporativa de la empresa utilizando los [métodos](https://yfinance-python.org/reference/yfinance.stock.html) establecidos dentro de **yfinance**:\n"
       ],
       "metadata": {
         "id": "4Eoi8tv8zpsQ"
@@ -160,7 +160,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#por ejemplo, 'balance'\n",
+        "#por ejeo, 'balance'\n",
         "balance"
       ],
       "metadata": {
@@ -507,8 +507,8 @@
               "    fill: var(--button-hover-fill-color);\n",
               "  }\n",
               "\n",
-              "  .colab-df-quickchart-complete:disabled,\n",
-              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "  .colab-df-quickchart-coete:disabled,\n",
+              "  .colab-df-quickchart-coete:disabled:hover {\n",
               "    background-color: var(--disabled-bg-color);\n",
               "    fill: var(--disabled-fill-color);\n",
               "    box-shadow: none;\n",
@@ -573,7 +573,7 @@
               "            console.error('Error during call to suggestCharts:', error);\n",
               "          }\n",
               "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "          quickchartButtonEl.classList.add('colab-df-quickchart-coete');\n",
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
@@ -645,7 +645,7 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "balance",
-              "summary": "{\n  \"name\": \"balance\",\n  \"rows\": 72,\n  \"fields\": [\n    {\n      \"column\": \"2024-12-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -2173000000.0,\n        \"max\": 69226000000.0,\n        \"num_unique_values\": 54,\n        \"samples\": [\n          24839000000.0,\n          13799000000.0,\n          59289000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-09-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -2072000000.0,\n        \"max\": 69636000000.0,\n        \"num_unique_values\": 53,\n        \"samples\": [\n          19572000000.0,\n          17000000.0,\n          58705000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-06-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1988000000.0,\n        \"max\": 67886000000.0,\n        \"num_unique_values\": 53,\n        \"samples\": [\n          20138000000.0,\n          17000000.0,\n          58257000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-03-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1884000000.0,\n        \"max\": 67895000000.0,\n        \"num_unique_values\": 56,\n        \"samples\": [\n          4190000000.0,\n          5069000000.0,\n          424000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2023-12-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1787000000.0,\n        \"max\": 67885000000.0,\n        \"num_unique_values\": 58,\n        \"samples\": [\n          3933000000.0,\n          1053000000.0,\n          544000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2023-09-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": 723000000.0,\n        \"max\": 913000000.0,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          769000000.0,\n          723000000.0,\n          913000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"balance\",\n  \"rows\": 72,\n  \"fields\": [\n    {\n      \"column\": \"2024-12-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -2173000000.0,\n        \"max\": 69226000000.0,\n        \"num_unique_values\": 54,\n        \"saes\": [\n          24839000000.0,\n          13799000000.0,\n          59289000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-09-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -2072000000.0,\n        \"max\": 69636000000.0,\n        \"num_unique_values\": 53,\n        \"saes\": [\n          19572000000.0,\n          17000000.0,\n          58705000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-06-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1988000000.0,\n        \"max\": 67886000000.0,\n        \"num_unique_values\": 53,\n        \"samples\": [\n          20138000000.0,\n          17000000.0,\n          58257000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2024-03-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1884000000.0,\n        \"max\": 67895000000.0,\n        \"num_unique_values\": 56,\n        \"samples\": [\n          4190000000.0,\n          5069000000.0,\n          424000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2023-12-31 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": -1787000000.0,\n        \"max\": 67885000000.0,\n        \"num_unique_values\": 58,\n        \"samples\": [\n          3933000000.0,\n          1053000000.0,\n          544000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"2023-09-30 00:00:00\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": 723000000.0,\n        \"max\": 913000000.0,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          769000000.0,\n          723000000.0,\n          913000000.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
@@ -667,7 +667,7 @@
     {
       "cell_type": "code",
       "source": [
-        "eps_info= eps_info.tz_localize(None)   #el resultado tiene horario de New York (UTC-4), o EDT\n",
+        "eps_info= eps_info.tz_localize(None)   #el resultado está en hora de New York (UTC-4), o EDT\n",
         "eps_info"
       ],
       "metadata": {
@@ -1088,7 +1088,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Si se requiere trabajar con cualquier pd.DataFrame generado durante el código en Excel, la línea de código de descarga es:"
+        "Si se requiere trabajar con cualquier pd.DataFrame generado hasta aquí en Excel, la línea de código para descargar es:"
       ],
       "metadata": {
         "id": "dbjTh4ErCdRP"
@@ -1098,7 +1098,7 @@
       "cell_type": "code",
       "source": [
         "#por ejemplo, 'balance'\n",
-        "balance.to_excel('ifnormacion_de_la_empresa.xlsx')   # se puede modificar el nombre del archivo pero se debe respetar la extencion '.xlsx'"
+        "balance.to_excel('informacion_de_la_empresa.xlsx')   # se puede modificar el nombre del archivo pero se debe respetar la extencion '.xlsx'"
       ],
       "metadata": {
         "id": "22lHkgopzvKR"
@@ -1657,9 +1657,9 @@
       "source": [
         "<br>\n",
         "\n",
-        "Por último, se pueden graficar los precios de cotización de la empresa (OHLC) haciendo uso de la librería especializada **mplfinance**. <br>\n",
+        "Por último, se pueden graficar los precios de cotización de la empresa (OHLC) haciendo uso de la librería especializada **mplfinance**. Para conocer los detalles de personalizacion de las gráficas, pueden hacer click [aquí](https://github.com/matplotlib/mplfinance/tree/master). <br>\n",
         "\n",
-        "A continuación se muestra la *Gráfica 1* de velas, con el  estilo predefinido de **\"default\"**:\n"
+        "A continuación se muestra la *Gráfica 1* de velas, con el  estilo predefinido **\"default\"**:\n"
       ],
       "metadata": {
         "id": "hQrHdU1VCc6P"
@@ -1671,7 +1671,7 @@
         "#declaramos la grafica y ajustamos los parametros\n",
         "mpf.plot(data,                    #IMPORTANTE: 'data' debe ser un Pandas DataFrame\n",
         "         type= \"candlestick\",     #algunos tipos de grafica son: de linea (line) y de vela (candlestick)\n",
-        "         style= \"default\",        #algunos estilos disponibles son: binance, blueskies, classic, default, nightclouds & yahoo\n",
+        "         style= \"default\",        #algunos estilos son: binance, blueskies, classic, default, nightclouds & yahoo\n",
         "         title= \"\\n Gráfica 1: Comportamiento de la acción de $AMD en lo que va del año.\",\n",
         "         ylabel =\"\\n Precio (USD) \\n\",\n",
         "         datetime_format= '%d-%b-%y',\n",
@@ -1679,7 +1679,7 @@
         "         figratio=(16, 9),\n",
         "         xrotation= 0)\n",
         "         #linecolor='#00ff00')        #en caso de ser una grafica de linea, se puede modificar su color\n",
-        "         #savefig='figura1.png')      #se puede descargar la grafica habilitando este atributo"
+        "         #savefig='figura1.png')      #se puede descargar la grafica habilitando esta propiedad"
       ],
       "metadata": {
         "colab": {
