--- a/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
@@ -2076,7 +2076,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Por último, se pueden graficar los precios de cotización de la empresa (OHLC) haciendo uso de la librería especializada **mplfinance**. Para conocer los detalles de personalización de las gráficas, pueden hacer click [aquí](https://github.com/matplotlib/mplfinance/tree/master). <br>\n",
+        "Por último, se pueden graficar los precios de cotización de la empresa (OHLC) haciendo uso de la librería especializada **mplfinance**. Para conocer los detalles de personalización de las gráficas, pueden hacer click [aquí](https://github.com/matplotlib/mplfinance/blob/master/markdown/customization_and_styles.md). <br>\n",
         "\n",
         "A continuación se muestra la *Gráfica 1* de velas, con el  estilo predefinido **\"default\"**:\n"
       ],
