--- a/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
@@ -1565,7 +1565,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Los datos obtenidos son los siguientes:\n"
+        "Los datos obtenidos son estos:\n"
       ],
       "metadata": {
         "id": "kmpJoGhsuLKd"
