--- a/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/Análisis_individual_de_una_acción.ipynb
@@ -2127,7 +2127,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "En la *Gráfica 2*, se usa el estilo predefinido de **\"nightclouds\"**:"
+        "En la *Gráfica 2*, se usa el estilo predefinido **\"nightclouds\"**:"
       ],
       "metadata": {
         "id": "kRxQ95e40Pk7"
