Update and rename Análisis_individual_de_una_acción.ipynb to 1.Análisis_individual_de_una_acción.ipynb

--- a/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
@@ -94,7 +94,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Definimos el objeto *empresa* con ayuda de la Clase **Ticker** de la librería. Debemos colocar entre comillas el [ticker](https://economipedia.com/definiciones/simbolo-ticker.html) de la empresa a analizar:"
+        "Definimos el objeto *empresa* con ayuda de la Clase **[Ticker](https://yfinance-python.org/reference/api/yfinance.Ticker.html#yfinance.Ticker)** de la librería. Debemos colocar entre comillas el [ticker](https://economipedia.com/definiciones/simbolo-ticker.html) de la empresa a analizar:"
       ],
       "metadata": {
         "id": "qX7kFgZPzmJi"
