--- a/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
+++ b/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "# 2. Análisis simultáneo de varios tickers de distinta clase: <br> **forex, bonds, indexes & stocks.**\n",
         "\n",
-        "## En este apartado se muestra la forma de acceder a los **precio** de varios instrumentos financieros que están disponibles en la página de [Yahoo Finance](https://finance.yahoo.com/markets/). Por ejemplo, se puede consultar el Tipo de Cambio Peso mexicano/Dólar estadounidense ([MXN=X](https://finance.yahoo.com/quote/MXN=X/)), entre otras divisas; el precio promedio de las Notas del Tesoro de Estados Unidos a 10 años ([^TNX](https://finance.yahoo.com/quote/%5ETNX/)); valor de los índices bursátiles como el S&P500 ([^GSPC](https://finance.yahoo.com/quote/%5EGSPC/)) o Nasdaq Composite ([^IXIC](https://finance.yahoo.com/quote/%5EIXIC/)); además del precio de cierre de varias acciones como [APPL](https://finance.yahoo.com/quote/AAPL/), [AMZN](https://finance.yahoo.com/quote/AMZN/) o [TSLA](https://finance.yahoo.com/quote/TSLA/).\n",
+        "## En este apartado se muestra la forma de acceder a los **precios** de varios instrumentos financieros que están disponibles en la página de [Yahoo Finance](https://finance.yahoo.com/markets/). Por ejemplo, se puede consultar el Tipo de Cambio Peso mexicano/Dólar estadounidense ([MXN=X](https://finance.yahoo.com/quote/MXN=X/)), entre otras divisas; el precio promedio de las Notas del Tesoro de Estados Unidos a 10 años ([^TNX](https://finance.yahoo.com/quote/%5ETNX/)); valor de los índices bursátiles como el S&P500 ([^GSPC](https://finance.yahoo.com/quote/%5EGSPC/)) o Nasdaq Composite ([^IXIC](https://finance.yahoo.com/quote/%5EIXIC/)); además del precio de cierre de varias acciones como [APPL](https://finance.yahoo.com/quote/AAPL/), [AMZN](https://finance.yahoo.com/quote/AMZN/) o [TSLA](https://finance.yahoo.com/quote/TSLA/).\n",
         "\n",
         "## Al final de este apartado se utiliza la librería **[matplotlib](https://matplotlib.org/stable/index.html)** para realizar la gráfica de varios instrumentos que cotizan en bolsa.\n",
         "\n",
@@ -109,7 +109,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#listas con los ticker reconocidos en YFinance\n",
+        "#listas con los ticker reconocidos en yahoo finance\n",
         "forex= [\"MXN=X\", \"JPYUSD=X\", \"CNYUSD=X\", \"EURUSD=X\", \"USDCHF=X\"]\n",
         "bonds= [\"^TNX\",  \"^FVX\", \"^IRX\"]\n",
         "index= [\"^GSPC\", \"^IXIC\", \"^DJI\", \"^RUT\"] #, \"^N225\", \"000001.SS\", \"^HSI\",\"^FTSE\", \"^GDAXI\", \"^STOXX50E\"]\n",
@@ -147,7 +147,7 @@
         "data.index = data.index.tz_localize(None)\n",
         "\n",
         "#definimos el formato de fecha en los datos del indice de la tabla\n",
-        "data.index = pd.to_datetime(data.index, format= '%Y-m%-d% %H:%M:%S')\n",
+        "data.index = pd.to_datetime(data.index, format= '%Y-%m-%d %H:%M:%S')\n",
         "\n",
         "#cambiamos el nombre del indice, antes: Date, ahora: Fecha\n",
         "data.index.name = 'Fecha'"
@@ -611,7 +611,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#linea de codigo para descargar el DataFrame como archivo excel\n",
+        "#línea de coóigo para descargar el DataFrame como archivo Excel\n",
         "data.to_excel('precios_de_cierre.xlsx')"
       ],
       "metadata": {
@@ -638,10 +638,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#rendimiento aritmetico:\n",
+        "#rendimiento aritmético:\n",
         "rendimientos = round(((data/data.shift(1))-1), 4)\n",
         "\n",
-        "#rendimiento logaritmico:\n",
+        "#rendimiento logarítmico:\n",
         "rendimientos= round(np.log(data/data.shift(1)), 4)"
       ],
       "metadata": {
@@ -1091,7 +1091,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Sustituimos los valores NaN por Ceros para hacer coincidir en la grafica el punto de partida del análisis"
+        "Sustituimos los valores NaN por ceros para hacer coincidir en la gráfica el punto de partida del análisis"
       ],
       "metadata": {
         "id": "8t5XcLj5j9Hp"
@@ -1100,7 +1100,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#cambiamos los datos NaN por ceros\n",
+        "#cambiamos los valores NaN por ceros\n",
         "rendimientos.fillna(value=0, inplace=True)"
       ],
       "metadata": {
@@ -1587,7 +1587,7 @@
         "#utilizamos la funcion cumsum de Numpy\n",
         "rendimientos_acc = np.cumsum(rendimientos)\n",
         "\n",
-        "#linea de codigo para descargar el pd.DataFrame como archivo excel:\n",
+        "#línea de código para descargar el pd.DataFrame como archivo Excel:\n",
         "rendimientos_acc.to_excel('rendimientos_acumulados.xlsx')\n",
         "\n",
         "#resultado\n",
@@ -2060,7 +2060,7 @@
         "#establesemos el formato de porcentaje al eje y\n",
         "plt.gca().yaxis.set_major_formatter(PercentFormatter())\n",
         "\n",
-        "#linea de codigo para descargar la grafica como archivo .png es:\n",
+        "#línea de código para descargar la gráfica como archivo .png:\n",
         "#plt.savefig('figura1.png', dpi=300, bbox_inches='tight', transparent=False)\n",
         "\n",
         "#resultado\n",
