--- a/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
+++ b/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
@@ -2054,7 +2054,7 @@
         "#damos el formato de mes y año en el eje x\n",
         "plt.gca().xaxis.set_major_formatter(DateFormatter('%b-%y'))\n",
         "\n",
-        "#definimos la localizacion de las etiquetas del eje x\n",
+        "#definimos el intervalo de las etiquetas del eje x\n",
         "plt.gca().xaxis.set_major_locator(mdates.MonthLocator(interval=1))\n",
         "\n",
         "#establesemos el formato de porcentaje al eje y\n",
