--- a/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
+++ b/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "# 2. Análisis simultáneo de varios tickers de distinta clase: <br> **forex, bonds, indexes & stocks.**\n",
         "\n",
-        "## En este apartado se muestra la forma de acceder a los **precios** de varios instrumentos financieros que están disponibles en la página de [Yahoo Finance](https://finance.yahoo.com/markets/). Por ejemplo, se puede consultar el Tipo de Cambio Peso mexicano/Dólar estadounidense ([MXN=X](https://finance.yahoo.com/quote/MXN=X/)), entre otras divisas; el precio promedio de las Notas del Tesoro de Estados Unidos a 10 años ([^TNX](https://finance.yahoo.com/quote/%5ETNX/)); valor de los índices bursátiles como el S&P500 ([^GSPC](https://finance.yahoo.com/quote/%5EGSPC/)) o Nasdaq Composite ([^IXIC](https://finance.yahoo.com/quote/%5EIXIC/)); además del precio de cierre de varias acciones como [APPL](https://finance.yahoo.com/quote/AAPL/), [AMZN](https://finance.yahoo.com/quote/AMZN/) o [TSLA](https://finance.yahoo.com/quote/TSLA/).\n",
+        "## En este apartado se muestra la forma de acceder a los **precios** de varios instrumentos financieros que están disponibles en la página de [Yahoo Finance](https://finance.yahoo.com/markets/). Por ejemplo, se puede consultar el Tipo de Cambio Peso mexicano/Dólar estadounidense ([MXN=X](https://finance.yahoo.com/quote/MXN=X/)), entre otras divisas; el precio promedio de las Notas del Tesoro de Estados Unidos a 10 años ([^TNX](https://finance.yahoo.com/quote/%5ETNX/)); valor de los índices bursátiles como el S&P500 ([^GSPC](https://finance.yahoo.com/quote/%5EGSPC/)) o Nasdaq Composite ([^IXIC](https://finance.yahoo.com/quote/%5EIXIC/)); además del precio de cierre de varias acciones como [APPL](https://finance.yahoo.com/quote/APPL/), [AMZN](https://finance.yahoo.com/quote/AMZN/) o [TSLA](https://finance.yahoo.com/quote/TSLA/).\n",
         "\n",
         "## Al final de este apartado se utiliza la librería **[matplotlib](https://matplotlib.org/stable/index.html)** para realizar la gráfica de varios instrumentos que cotizan en bolsa.\n",
         "\n",
@@ -109,7 +109,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#listas con los ticker reconocidos en yahoo finance\n",
+        "#listas con los tickers reconocidos en yahoo finance\n",
         "forex= [\"MXN=X\", \"JPYUSD=X\", \"CNYUSD=X\", \"EURUSD=X\", \"USDCHF=X\"]\n",
         "bonds= [\"^TNX\",  \"^FVX\", \"^IRX\"]\n",
         "index= [\"^GSPC\", \"^IXIC\", \"^DJI\", \"^RUT\"] #, \"^N225\", \"000001.SS\", \"^HSI\",\"^FTSE\", \"^GDAXI\", \"^STOXX50E\"]\n",
