--- a/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
@@ -1549,7 +1549,7 @@
         "data = data.tz_localize(None)\n",
         "\n",
         "#nos aseguramos de declarar el formato de fecha en los datos del indice\n",
-        "data.index = pd.to_datetime(data.index, format= '%Y-m%-d% %H:%M:%S')\n",
+        "data.index = pd.to_datetime(data.index, format= '%Y-%m-%d %H:%M:%S')\n",
         "\n",
         "#cambiamos el nombre de la primera columna a 'Fecha'\n",
         "data.index.name = 'Fecha'"
