--- a/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
+++ b/Ejemplos_con_YFinance/1.Análisis_individual_de_una_acción.ipynb
@@ -116,7 +116,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Podemos obtener la información financiera y corporativa de la empresa utilizando los [métodos](https://yfinance-python.org/reference/yfinance.stock.html) establecidos dentro de **yfinance**:\n"
+        "Podemos obtener la información financiera y corporativa de la empresa utilizando los [métodos](https://ranaroussi.github.io/yfinance/reference/yfinance.stock.html) establecidos dentro de **yfinance**:\n"
       ],
       "metadata": {
         "id": "4Eoi8tv8zpsQ"
