--- a/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
+++ b/Ejemplos_con_YFinance/2.Análisis_simultáneo_de_varios_tickers.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "\n",
         "\n",
-        "# 2. Análisis simultáneo de varios tickers de distinta clase: <br> **forex, bonds, indexes & stocks.**\n",
+        "# 2. Análisis simultáneo de varios instrumentos financieros de distinta clase: <br> **forex, bonds, indexes & stocks.**\n",
         "\n",
         "## En este apartado se muestra la forma de acceder a los **precios** de varios instrumentos financieros que están disponibles en la página de [Yahoo Finance](https://finance.yahoo.com/markets/). Por ejemplo, se puede consultar el Tipo de Cambio Peso mexicano/Dólar estadounidense ([MXN=X](https://finance.yahoo.com/quote/MXN=X/)), entre otras divisas; el precio promedio de las Notas del Tesoro de Estados Unidos a 10 años ([^TNX](https://finance.yahoo.com/quote/%5ETNX/)); valor de los índices bursátiles como el S&P500 ([^GSPC](https://finance.yahoo.com/quote/%5EGSPC/)) o Nasdaq Composite ([^IXIC](https://finance.yahoo.com/quote/%5EIXIC/)); además del precio de cierre de varias acciones como [AAPL](https://finance.yahoo.com/quote/AAPL/), [AMZN](https://finance.yahoo.com/quote/AMZN/) o [TSLA](https://finance.yahoo.com/quote/TSLA/).\n",
         "\n",
